// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileIntegrationForm - snapshots renders fixture advancedParams.json: advanced-params 1`] = `
"/* Emotion Styles */
.css-4 {font-weight: normal; font-size: 14px; letter-spacing: 0.149px; margin: unset;}
.css-9 {display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-pack: end; -ms-flex-pack: end; -webkit-justify-content: flex-end; justify-content: flex-end;}
.css-10 {min-width: 50px;}
.css-6 {display: grid; grid-template-columns: repeat(1, auto); -webkit-column-gap: 5%; column-gap: 5%; grid-auto-flow: row dense;}
.css-3 {height: 16px; width: 14px; cursor: pointer; margin-right: 4px;}
.css-0 {height: calc(100% - 87px); padding: 16px; overflow-y: scroll;}
.css-7 {--checkbox-border: var(--vscode-icon-foreground); display: flex; -webkit-align-items: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; margin-top: 0; description: Timeout in seconds for the connection;}
.css-8 {display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; margin-bottom: 2px;}
.css-2 {display: flex; -webkit-align-items: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; padding: 8px 0; cursor: pointer; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;}
.css-2:hover {opacity: 0.8;}
.css-5 {padding-left: 8px; margin-top: 8px; display: none;}
.css-1 {display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: justify; -webkit-justify-content: space-between; justify-content: space-between; padding-bottom: 20px; gap: 10px;}

/* DOM */
<div>
  <div
    class="css-0"
  >
    <div
      class="css-1"
    >
      <div
        class="css-2"
      >
        <div
          class="css-3"
        >
          <i
            class="codicon codicon-chevron-right"
          />
        </div>
        <p
          class="css-4"
        >
          Advanced Parameters
        </p>
      </div>
      <div
        class="css-5"
      >
        <div
          class="css-6"
          direction="vertical"
        >
          <div
            style="display: flex; flex-direction: column;"
          >
            <vscode-checkbox
              __forwardedref="[object Object]"
              aria-checked="false"
              aria-disabled="false"
              aria-required="false"
              class="css-7"
              role="checkbox"
              sx="[object Object]"
              tabindex="0"
            >
              <div
                class="css-8"
              >
                <div
                  style="cursor: pointer;"
                >
                  Connection timeout
                </div>
              </div>
              <input
                slot="form-associated-proxy"
                style="display: none;"
                type="checkbox"
                value="undefined"
              />
            </vscode-checkbox>
            <div
              style="margin-top: 2px; margin-bottom: 5px; padding: 2px 8px; border-radius: 4px; font-size: 13px; user-select: text;"
            >
              Timeout in seconds for the connection
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-9"
    >
      <vscode-button
        style="margin-right: 8px;"
        title="Cancel"
      >
        <div
          class="css-10"
          style="min-width: 50px;"
        >
          Cancel
        </div>
        <input
          slot="form-associated-proxy"
          style="display: none;"
          type="undefined"
        />
      </vscode-button>
      <vscode-button
        title="Save"
      >
        <div
          class="css-10"
          style="min-width: 50px;"
        >
          Save
        </div>
        <input
          slot="form-associated-proxy"
          style="display: none;"
          type="undefined"
        />
      </vscode-button>
    </div>
  </div>
</div>"
`;

exports[`FileIntegrationForm - snapshots renders fixture contentSchemaEdit.json: content-schema-edit 1`] = `
"/* Emotion Styles */
.css-3 {padding: 0;}
.css-19 {cursor: pointer; height: 14px; width: 14px; margin-top: 16px; margin-bottom: 13px; margin-left: 10px; color: var(--vscode-notificationsErrorIcon-foreground);}
.css-16 {display: flex; -webkit-align-items: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; cursor: pointer; height: 16px; margin-right: 10px;}
.css-6 {display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; gap: 2px; color: var(--vscode-editor-foreground);}
.css-4 {margin-top: 12px; padding-left: 0;}
.css-12 {display: flex; -webkit-align-items: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; cursor: pointer; margin-left: 12px;}
.css-9 {font-weight: normal; font-size: 14px; letter-spacing: 0.149px; margin: unset;}
.css-20 {display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-pack: end; -ms-flex-pack: end; -webkit-justify-content: flex-end; justify-content: flex-end;}
.css-17 {cursor: pointer; height: 14px; width: 14px; margin-top: 16px; margin-bottom: 13px; color: var(--vscode-statusBarItem-remoteBackground);}
.css-21 {min-width: 50px;}
.css-2 {margin-bottom: 0;}
.css-7 {display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-pack: justify; -webkit-justify-content: space-between; justify-content: space-between; -webkit-align-items: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center;}
.css-0 {height: calc(100% - 87px); padding: 16px; overflow-y: scroll;}
.css-11 {display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; width: 100%; -webkit-box-pack: justify; -webkit-justify-content: space-between; justify-content: space-between;}
.css-13 {display: flex; -webkit-align-items: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; gap: 12px; font-family: var(--vscode-font-family); -webkit-flex: 1; -ms-flex: 1; flex: 1;}
.css-8 {display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; margin-bottom: 2px;}
.css-10 {display: flex; background: var(--vscode-editor-background); border: 1px solid var(--vscode-dropdown-border); margin: 8px 0; width: 100%; height: 32px; -webkit-align-items: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center;}
.css-18 {height: 16px; width: 14px; cursor: pointer;}
.css-15 {color: var(--vscode-editor-foreground, #222); -webkit-flex: 1; -ms-flex: 1; flex: 1; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; font-family: var(--vscode-font-family);}
.css-1 {display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: justify; -webkit-justify-content: space-between; justify-content: space-between; padding-bottom: 20px; gap: 10px;}
.css-14 {font-size: 13px; color: var(--vscode-descriptionForeground, #888); background: var(--vscode-editorWidget-background, #f5f5f5); border-radius: 4px; padding: 2px 8px; letter-spacing: 0.1px;}

/* DOM */
<div>
  <div
    class="css-0"
  >
    <div
      class="css-1"
    >
      <div
        class="css-2"
      >
        <div
          class="css-3"
        >
          <div
            class="css-4"
          >
            <div
              class="css-5"
            >
              <div
                class="dropdown-container css-6"
              >
                <div
                  class="css-7"
                >
                  <div
                    class="css-8"
                  >
                    <label
                    >
                      File Format
                    </label>
                  </div>
                </div>
                <vscode-dropdown
                  aria-activedescendant=""
                  aria-controls=""
                  aria-disabled="false"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="collapsible"
                  role="combobox"
                  tabindex="0"
                >
                  <vscode-option
                    aria-selected="false"
                    role="option"
                    value="JSON"
                  >
                    JSON
                  </vscode-option>
                  <select
                    disabled=""
                    slot="form-associated-proxy"
                    style="display: none;"
                  />
                </vscode-dropdown>
              </div>
            </div>
            <div
              style="margin-top: 16px;"
            >
              <p
                class="css-9"
                style="margin-bottom: 8px;"
              >
                Content Schema
              </p>
              <div>
                <div
                  class="css-10"
                  data-testid="order-item"
                >
                  <div
                    class="css-11"
                  >
                    <div
                      class="css-12"
                      data-test-id="order-param"
                    >
                      <div
                        class="css-13"
                      >
                        <span
                          class="css-14"
                        >
                          Order
                        </span>
                        <span
                          class="css-15"
                        >
                          order
                        </span>
                      </div>
                    </div>
                    <div
                      class="css-16"
                    >
                      <div
                        class="css-17"
                      >
                        <div
                          class="css-18"
                        >
                          <i
                            class="codicon codicon-edit"
                          />
                        </div>
                      </div>
                      <div
                        class="css-19"
                      >
                        <div
                          class="css-18"
                        >
                          <i
                            class="codicon codicon-trash"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-20"
    >
      <vscode-button
        style="margin-right: 8px;"
        title="Cancel"
      >
        <div
          class="css-21"
          style="min-width: 50px;"
        >
          Cancel
        </div>
        <input
          slot="form-associated-proxy"
          style="display: none;"
          type="undefined"
        />
      </vscode-button>
      <vscode-button
        title="Save"
      >
        <div
          class="css-21"
          style="min-width: 50px;"
        >
          Save
        </div>
        <input
          slot="form-associated-proxy"
          style="display: none;"
          type="undefined"
        />
      </vscode-button>
    </div>
  </div>
</div>"
`;

exports[`FileIntegrationForm - snapshots renders fixture csvArrayHandler.json: csv-array-handler 1`] = `
"/* Emotion Styles */
.css-3 {padding: 0;}
.css-6 {display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; gap: 2px; color: var(--vscode-editor-foreground);}
.css-4 {margin-top: 12px; padding-left: 0;}
.css-10 {--checkbox-border: var(--vscode-icon-foreground); display: flex; -webkit-align-items: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; description: Each record represents a row in the CSV file;}
.css-11 {display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-pack: end; -ms-flex-pack: end; -webkit-justify-content: flex-end; justify-content: flex-end;}
.css-12 {min-width: 50px;}
.css-2 {margin-bottom: 0;}
.css-7 {display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-pack: justify; -webkit-justify-content: space-between; justify-content: space-between; -webkit-align-items: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center;}
.css-9 {display: grid; grid-template-columns: repeat(1, auto); -webkit-column-gap: 5%; column-gap: 5%; grid-auto-flow: row dense;}
.css-0 {height: calc(100% - 87px); padding: 16px; overflow-y: scroll;}
.css-8 {display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; margin-bottom: 2px;}
.css-1 {display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: justify; -webkit-justify-content: space-between; justify-content: space-between; padding-bottom: 20px; gap: 10px;}

/* DOM */
<div>
  <div
    class="css-0"
  >
    <div
      class="css-1"
    >
      <div
        class="css-2"
      >
        <div
          class="css-3"
        >
          <div
            class="css-4"
          >
            <div
              class="css-5"
            >
              <div
                class="dropdown-container css-6"
              >
                <div
                  class="css-7"
                >
                  <div
                    class="css-8"
                  >
                    <label
                    >
                      File Format
                    </label>
                  </div>
                </div>
                <vscode-dropdown
                  aria-activedescendant=""
                  aria-controls=""
                  aria-disabled="false"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="collapsible"
                  role="combobox"
                  tabindex="0"
                >
                  <vscode-option
                    aria-selected="false"
                    role="option"
                    value="CSV"
                  >
                    CSV
                  </vscode-option>
                  <select
                    disabled=""
                    slot="form-associated-proxy"
                    style="display: none;"
                  />
                </vscode-dropdown>
              </div>
            </div>
            <div
              style="margin-top: 12px;"
            >
              <div
                class="css-9"
                direction="vertical"
              >
                <div
                  style="display: flex; flex-direction: column;"
                >
                  <vscode-checkbox
                    __forwardedref="[object Object]"
                    aria-checked="false"
                    aria-disabled="false"
                    aria-required="false"
                    class="css-10"
                    role="checkbox"
                    sx="[object Object]"
                    tabindex="0"
                  >
                    <div
                      class="css-8"
                    >
                      <div
                        style="cursor: pointer;"
                      >
                        Rows
                      </div>
                    </div>
                    <input
                      disabled=""
                      slot="form-associated-proxy"
                      style="display: none;"
                      type="checkbox"
                      value="undefined"
                    />
                  </vscode-checkbox>
                  <div
                    style="margin-top: 2px; margin-bottom: 5px; padding: 2px 8px; border-radius: 4px; font-size: 13px; user-select: text;"
                  >
                    Each record represents a row in the CSV file
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-11"
    >
      <vscode-button
        style="margin-right: 8px;"
        title="Cancel"
      >
        <div
          class="css-12"
          style="min-width: 50px;"
        >
          Cancel
        </div>
        <input
          slot="form-associated-proxy"
          style="display: none;"
          type="undefined"
        />
      </vscode-button>
      <vscode-button
        title="Save"
      >
        <div
          class="css-12"
          style="min-width: 50px;"
        >
          Save
        </div>
        <input
          slot="form-associated-proxy"
          style="display: none;"
          type="undefined"
        />
      </vscode-button>
    </div>
  </div>
</div>"
`;

exports[`FileIntegrationForm - snapshots renders fixture existingHandler.json: existing-handler 1`] = `
"/* Emotion Styles */
.css-2 {display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-pack: end; -ms-flex-pack: end; -webkit-justify-content: flex-end; justify-content: flex-end;}
.css-3 {min-width: 50px;}
.css-0 {height: calc(100% - 87px); padding: 16px; overflow-y: scroll;}
.css-1 {display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: justify; -webkit-justify-content: space-between; justify-content: space-between; padding-bottom: 20px; gap: 10px;}

/* DOM */
<div>
  <div
    class="css-0"
  >
    <div
      class="css-1"
    />
    <div
      class="css-2"
    >
      <vscode-button
        style="margin-right: 8px;"
        title="Cancel"
      >
        <div
          class="css-3"
          style="min-width: 50px;"
        >
          Cancel
        </div>
        <input
          slot="form-associated-proxy"
          style="display: none;"
          type="undefined"
        />
      </vscode-button>
      <vscode-button
        title="Save"
      >
        <div
          class="css-3"
          style="min-width: 50px;"
        >
          Save
        </div>
        <input
          slot="form-associated-proxy"
          style="display: none;"
          type="undefined"
        />
      </vscode-button>
    </div>
  </div>
</div>"
`;

exports[`FileIntegrationForm - snapshots renders fixture multiVariantOnCreate.json: multi-variant-on-create 1`] = `
"/* Emotion Styles */
.css-3 {padding: 0;}
.css-6 {display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; gap: 2px; color: var(--vscode-editor-foreground);}
.css-4 {margin-top: 12px; padding-left: 0;}
.css-13 {display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; height: 24px; -webkit-align-items: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: fit-content; cursor: pointer; font-size: 0.875rem; min-width: 64px; box-sizing: border-box; font-weight: 500; border-radius: 4px; gap: 8px; color: var(--vscode-textLink-foreground);}
.css-13:hover,.css-13.active {background: var(--vscode-editor-lineHighlightBorder);}
.css-15 {display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-pack: end; -ms-flex-pack: end; -webkit-justify-content: flex-end; justify-content: flex-end;}
.css-16 {min-width: 50px;}
.css-2 {margin-bottom: 0;}
.css-12 {position: relative; display: inline-block; cursor: pointer; pointer-events: auto;}
.css-7 {display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-pack: justify; -webkit-justify-content: space-between; justify-content: space-between; -webkit-align-items: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center;}
.css-9 {display: grid; grid-template-columns: repeat(1, auto); -webkit-column-gap: 5%; column-gap: 5%; grid-auto-flow: row dense;}
.css-0 {height: calc(100% - 87px); padding: 16px; overflow-y: scroll;}
.css-10 {--checkbox-border: var(--vscode-icon-foreground); display: flex; -webkit-align-items: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; description: Process the file as a stream;}
.css-8 {display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; margin-bottom: 2px;}
.css-14 {height: 16px; width: 14px; cursor: pointer;}
.css-1 {display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: justify; -webkit-justify-content: space-between; justify-content: space-between; padding-bottom: 20px; gap: 10px;}
.css-11 {margin: 8px 0;}

/* DOM */
<div>
  <div
    class="css-0"
  >
    <div
      class="css-1"
    >
      <div
        class="css-2"
      >
        <div
          class="css-3"
        >
          <div
            class="css-4"
          >
            <div
              class="css-5"
            >
              <div
                class="dropdown-container css-6"
              >
                <div
                  class="css-7"
                >
                  <div
                    class="css-8"
                  >
                    <label
                    >
                      File Format
                    </label>
                  </div>
                </div>
                <vscode-dropdown
                  aria-activedescendant=""
                  aria-controls=""
                  aria-disabled="false"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="collapsible"
                  role="combobox"
                  tabindex="0"
                >
                  <vscode-option
                    aria-selected="false"
                    role="option"
                    value="JSON"
                  >
                    JSON
                  </vscode-option>
                  <select
                    disabled=""
                    slot="form-associated-proxy"
                    style="display: none;"
                  />
                </vscode-dropdown>
              </div>
            </div>
            <div
              style="margin-top: 12px;"
            >
              <div
                class="css-9"
                direction="vertical"
              >
                <div
                  style="display: flex; flex-direction: column;"
                >
                  <vscode-checkbox
                    __forwardedref="[object Object]"
                    aria-checked="false"
                    aria-disabled="false"
                    aria-required="false"
                    class="css-10"
                    role="checkbox"
                    sx="[object Object]"
                    tabindex="0"
                  >
                    <div
                      class="css-8"
                    >
                      <div
                        style="cursor: pointer;"
                      >
                        Stream the file content
                      </div>
                    </div>
                    <input
                      slot="form-associated-proxy"
                      style="display: none;"
                      type="checkbox"
                      value="undefined"
                    />
                  </vscode-checkbox>
                  <div
                    style="margin-top: 2px; margin-bottom: 5px; padding: 2px 8px; border-radius: 4px; font-size: 13px; user-select: text;"
                  >
                    Process the file as a stream
                  </div>
                </div>
              </div>
            </div>
            <div
              class="css-11"
              style="margin-top: 16px;"
            >
              <div
                class="css-12"
              >
                <div
                  class="css-13"
                >
                  <div
                    class="css-14"
                  >
                    <i
                      class="codicon codicon-add"
                    />
                  </div>
                  Define 
                  Content Schema
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-15"
    >
      <vscode-button
        style="margin-right: 8px;"
        title="Cancel"
      >
        <div
          class="css-16"
          style="min-width: 50px;"
        >
          Cancel
        </div>
        <input
          slot="form-associated-proxy"
          style="display: none;"
          type="undefined"
        />
      </vscode-button>
      <vscode-button
        title="Save"
      >
        <div
          class="css-16"
          style="min-width: 50px;"
        >
          Save
        </div>
        <input
          slot="form-associated-proxy"
          style="display: none;"
          type="undefined"
        />
      </vscode-button>
    </div>
  </div>
</div>"
`;

exports[`FileIntegrationForm - snapshots renders fixture newHandler.json: new-handler 1`] = `
"/* Emotion Styles */
.css-2 {display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-pack: end; -ms-flex-pack: end; -webkit-justify-content: flex-end; justify-content: flex-end;}
.css-3 {min-width: 50px;}
.css-0 {height: calc(100% - 87px); padding: 16px; overflow-y: scroll;}
.css-1 {display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: justify; -webkit-justify-content: space-between; justify-content: space-between; padding-bottom: 20px; gap: 10px;}

/* DOM */
<div>
  <div
    class="css-0"
  >
    <div
      class="css-1"
    />
    <div
      class="css-2"
    >
      <vscode-button
        style="margin-right: 8px;"
        title="Cancel"
      >
        <div
          class="css-3"
          style="min-width: 50px;"
        >
          Cancel
        </div>
        <input
          slot="form-associated-proxy"
          style="display: none;"
          type="undefined"
        />
      </vscode-button>
      <vscode-button
        title="Save"
      >
        <div
          class="css-3"
          style="min-width: 50px;"
        >
          Save
        </div>
        <input
          slot="form-associated-proxy"
          style="display: none;"
          type="undefined"
        />
      </vscode-button>
    </div>
  </div>
</div>"
`;

exports[`FileIntegrationForm - snapshots renders fixture postProcessActions.json: post-process-actions 1`] = `
"/* Emotion Styles */
.css-14 {font-weight: normal; font-size: 13px; margin: unset;}
.css-22 {width: 16px; height: 16px; border: 1px solid var(--vscode-sideBar-border); border-radius: 2px; background-color: var(--vscode-editor-inactiveSelectionBackground); color: var(--vscode-descriptionForeground); cursor: pointer; display: flex; -webkit-align-items: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; -webkit-justify-content: center; justify-content: center; font-size: 9px; font-weight: 600; -webkit-transition: background-color 0.1s ease,border-color 0.1s ease,color 0.1s ease,-webkit-transform 0.1s ease; transition: background-color 0.1s ease,border-color 0.1s ease,color 0.1s ease,transform 0.1s ease; outline: none; padding: 0; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);}
.css-22:focus-visible {outline: 1px solid var(--vscode-contrastBorder, var(--vscode-button-background)); outline-offset: 2px;}
.css-22:hover {background-color: var(--vscode-tab-unfocusedInactiveBackground, var(--vscode-editor-background)); -webkit-transform: scale(1.05); -moz-transform: scale(1.05); -ms-transform: scale(1.05); transform: scale(1.05);}
.css-21 {position: absolute; bottom: 4px; right: 6px; display: flex; gap: 6px; z-index: 1500;}
.css-4 {padding-left: 8px; margin-top: 8px; display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; gap: 20px;}
.css-18 {position: absolute; text-align: center; font-size: 10px; z-index: 1; -webkit-transition: all 0.2s ease; transition: all 0.2s ease; color: var(--vscode-foreground); font-weight: 600; top: 50%; -webkit-transform: translateY(-50%); -moz-transform: translateY(-50%); -ms-transform: translateY(-50%); transform: translateY(-50%); cursor: pointer; display: flex; -webkit-align-items: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; -webkit-justify-content: center; justify-content: center; white-space: nowrap;}
.css-18:first-of-type {left: 0; width: 40%;}
.css-18:last-of-type {left: 40%; width: 60%;}
.css-7 {--checkbox-border: var(--vscode-icon-foreground); display: flex; -webkit-align-items: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; margin-top: 0; description: Move the file to another location after processing;}
.css-3 {font-weight: normal; font-size: 14px; letter-spacing: 0.149px; margin: unset;}
.css-23 {display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-pack: end; -ms-flex-pack: end; -webkit-justify-content: flex-end; justify-content: flex-end;}
.css-9 {margin-top: 4px; margin-left: 16px;}
.css-11 {margin-left: 24px; margin-top: 8px; display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; gap: 12px;}
.css-2 {display: flex; -webkit-align-items: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; padding: 8px 0;}
.css-24 {min-width: 50px;}
.css-6 {display: grid; grid-template-columns: repeat(1, auto); -webkit-column-gap: 5%; column-gap: 5%; grid-auto-flow: row dense;}
.css-10 vscode-radio {margin: 0;}
.css-10 vscode-radio-group {display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; gap: 2px;}
.css-0 {height: calc(100% - 87px); padding: 16px; overflow-y: scroll;}
.css-20 {display: flex; -webkit-align-items: stretch; -webkit-box-align: stretch; -ms-flex-align: stretch; align-items: stretch; -webkit-box-pack: justify; -webkit-justify-content: space-between; justify-content: space-between; width: 100%; max-width: 100%; border-radius: 2px;}
.css-17 {position: absolute; top: 0; left: 0; right: 0; bottom: 0; background-color: var(--vscode-editor-inactiveSelectionBackground); color: var(--vscode-foreground); font-weight: 500; border-radius: 2px; display: flex; -webkit-box-pack: start; -ms-flex-pack: start; -webkit-justify-content: flex-start; justify-content: flex-start; -webkit-align-items: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; padding: 2px; -webkit-transition: all 0.2s ease; transition: all 0.2s ease; border: 1px solid var(--vscode-dropdown-border);}
.css-17:before {content: ""; position: absolute; height: calc(100% - 4px); width: calc(40% - 2px); left: 2px; border-radius: 1px; background: var(--vscode-menu-background); -webkit-transition: all 0.25s cubic-bezier(0.4, 0.0, 0.2, 1); transition: all 0.25s cubic-bezier(0.4, 0.0, 0.2, 1); z-index: 0; border: 1px solid var(--vscode-sideBar-border);}
.css-8 {display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; margin-bottom: 2px;}
.css-5 {margin: 0;}
.css-13 {display: flex; -webkit-align-items: baseline; -webkit-box-align: baseline; -ms-flex-align: baseline; align-items: baseline; gap: 8px; min-width: 0;}
.css-16 {font-size: 12px; position: relative; display: inline-flex; -webkit-align-items: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; min-width: 112px; width: max-content; height: 24px; margin-top: 2px; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; opacity: 1; pointer-events: auto;}
.css-19 {position: absolute; text-align: center; font-size: 10px; z-index: 1; -webkit-transition: all 0.2s ease; transition: all 0.2s ease; color: var(--vscode-descriptionForeground); font-weight: 500; top: 50%; -webkit-transform: translateY(-50%); -moz-transform: translateY(-50%); -ms-transform: translateY(-50%); transform: translateY(-50%); cursor: pointer; display: flex; -webkit-align-items: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; -webkit-justify-content: center; justify-content: center; white-space: nowrap;}
.css-19:first-of-type {left: 0; width: 40%;}
.css-19:last-of-type {left: 40%; width: 60%;}
.css-1 {display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: justify; -webkit-justify-content: space-between; justify-content: space-between; padding-bottom: 20px; gap: 10px;}
.css-12 {display: flex; -webkit-align-items: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: justify; -webkit-justify-content: space-between; justify-content: space-between; gap: 8px;}
.css-15 {color: var(--vscode-descriptionForeground); font-size: 11px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; min-width: 0;}

/* DOM */
<div>
  <div
    class="css-0"
  >
    <div
      class="css-1"
    >
      <div
        class="css-2"
      >
        <p
          class="css-3"
        >
          After File Processing
        </p>
      </div>
      <div
        class="css-4"
      >
        <div
          class="css-5"
        >
          <div
            class="css-6"
            direction="vertical"
          >
            <div
              style="display: flex; flex-direction: column;"
            >
              <vscode-checkbox
                __forwardedref="[object Object]"
                aria-checked="false"
                aria-disabled="false"
                aria-required="false"
                class="css-7"
                role="checkbox"
                sx="[object Object]"
                tabindex="0"
              >
                <div
                  class="css-8"
                >
                  <div
                    style="cursor: pointer;"
                  >
                    Move file after processing
                  </div>
                </div>
                <input
                  slot="form-associated-proxy"
                  style="display: none;"
                  type="checkbox"
                  value="undefined"
                />
              </vscode-checkbox>
              <div
                style="margin-top: 2px; margin-bottom: 5px; padding: 2px 8px; border-radius: 4px; font-size: 13px; user-select: text;"
              >
                Move the file to another location after processing
              </div>
            </div>
          </div>
          <div
            class="css-9"
          >
            <div
              class="css-10"
            >
              <div>
                <label
                />
              </div>
              <vscode-radio-group
                role="radiogroup"
              >
                <vscode-radio
                  aria-checked="false"
                  aria-disabled="false"
                  aria-required="false"
                  role="radio"
                >
                  Move
                  <input
                    slot="form-associated-proxy"
                    style="display: none;"
                    type="radio"
                    value="MOVE"
                  />
                </vscode-radio>
                <vscode-radio
                  aria-checked="false"
                  aria-disabled="false"
                  aria-required="false"
                  role="radio"
                >
                  Delete
                  <input
                    slot="form-associated-proxy"
                    style="display: none;"
                    type="radio"
                    value="DELETE"
                  />
                </vscode-radio>
              </vscode-radio-group>
            </div>
          </div>
          <div
            class="css-11"
          >
            <div>
              <div
                class="css-12"
              >
                <div
                  class="css-13"
                >
                  <p
                    class="css-14"
                  >
                    Target path
                  </p>
                  <span
                    class="css-15"
                  >
                    Destination path for the moved file
                  </span>
                </div>
                <div
                  class="css-16"
                >
                  <div
                    class="css-17"
                  />
                  <span
                    class="css-18"
                  >
                    Text
                  </span>
                  <span
                    class="css-19"
                  >
                    Expression
                  </span>
                </div>
              </div>
              <div
                class="css-20"
                style="position: relative; height: 100%;"
              >
                <div
                  style="position: relative; width: 100%; min-height: 26px; height: 100%;"
                >
                  <div
                    style="width: 100%; height: 100%; visibility: visible;"
                  >
                    <div
                      class="cm-editor ͼ1 ͼ2 ͼo ͼp ͼx"
                    >
                      <div
                        aria-live="polite"
                        class="cm-announced"
                      />
                      <div
                        class="cm-scroller"
                        tabindex="-1"
                      >
                        <div
                          aria-autocomplete="list"
                          aria-multiline="true"
                          aria-placeholder="/path/to/dir"
                          autocapitalize="off"
                          autocorrect="off"
                          class="cm-content cm-lineWrapping"
                          contenteditable="true"
                          role="textbox"
                          spellcheck="false"
                          style="tab-size: 4;"
                          translate="no"
                          writingsuggestions="false"
                        >
                          <div
                            class="cm-line"
                          >
                            <img
                              aria-hidden="true"
                              class="cm-widgetBuffer"
                            />
                            <span
                              aria-hidden="true"
                              class="cm-placeholder"
                              style="pointer-events: none;"
                            >
                              /path/to/dir
                            </span>
                            <br />
                          </div>
                          <div
                            class="cm-line"
                            style="width: 99999px; position: absolute;"
                          >
                            abc def ghi jkl mno pqr stu
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-21"
                  >
                    <button
                      class="css-22"
                      title="Open Helper Panel"
                    >
                      <svg
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m12 11.5l4-4H8zM19 3q.825 0 1.413.588T21 5v14q0 .825-.587 1.413T19 21H5q-.825 0-1.412-.587T3 19V5q0-.825.588-1.412T5 3zM5 16v3h14v-3zm14-2V5H5v9zM5 16v3z"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <p
                class="css-14"
                style="margin-top: 4px;"
              >
                Target path
                 is required
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-23"
    >
      <vscode-button
        style="margin-right: 8px;"
        title="Cancel"
      >
        <div
          class="css-24"
          style="min-width: 50px;"
        >
          Cancel
        </div>
        <input
          slot="form-associated-proxy"
          style="display: none;"
          type="undefined"
        />
      </vscode-button>
      <vscode-button
        title="Fix validation errors"
      >
        <div
          class="css-24"
          style="min-width: 50px;"
        >
          Save
        </div>
        <input
          disabled=""
          slot="form-associated-proxy"
          style="display: none;"
          type="undefined"
        />
      </vscode-button>
    </div>
  </div>
</div>"
`;
